[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/ui/ui_mouse_icons/inventory/inventory_ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/escoria-core/game/scenes/dialogs/dialog_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/escoria-core/game/scenes/camera_player/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ui/ui_mouse_icons/verbs_mouseicons.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/ui_mouse_icons/game.gd" type="Script" id=5]
[ext_resource path="res://game/ui/ui_mouse_icons/tooltip/target_tooltip.tscn" type="PackedScene" id=6]

[node name="game" type="Node2D"]
script = ExtResource( 5 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="inventory_layer" type="CanvasLayer" parent="ui"]
layer = 2

[node name="inventory_ui" parent="ui/inventory_layer" instance=ExtResource( 1 )]
margin_left = 1173.73
margin_top = 695.268
margin_right = 394.205
margin_bottom = 587.268

[node name="verbs_layer" type="CanvasLayer" parent="ui"]
layer = 2

[node name="verbs_menu" parent="ui/verbs_layer" instance=ExtResource( 4 )]
margin_left = 2234.6
margin_top = -583.507
margin_right = 2234.6
margin_bottom = -583.507

[node name="tooltip_layer" type="CanvasLayer" parent="ui"]
layer = 2

[node name="tooltip" parent="ui/tooltip_layer" instance=ExtResource( 6 )]
mouse_filter = 2

[node name="dialog_layer" type="CanvasLayer" parent="ui"]
layer = 3

[node name="dialog_player" parent="ui/dialog_layer" instance=ExtResource( 2 )]

[node name="camera" parent="." instance=ExtResource( 3 )]
